--- a/函数式编程/_posts/2020-07-27-函数式编程导言.md
+++ b/函数式编程/_posts/2020-07-27-函数式编程导言.md
@@ -15,7 +15,7 @@ title: 函数式编程导言
 ## 允许副作用式FP
 
 示例:
-```Typescript
+```typescript
 import * as R from 'ramda';
 
 type LogMaxNumber = (xs: number[]) => void;
@@ -34,7 +34,7 @@ logMaxNumber([1, 2, 3, 4, 5]);
 
 ## 严格控制副作用式FP
 例子
-```Typescript
+```typescript
 import * as fp from 'fp-ts';
 
 type LogMaxNumber = (xs: number[]) => fp.io.IO<void>;
