--- a/_featured_categories/函数式编程.md
+++ b/_featured_categories/函数式编程.md
@@ -3,14 +3,14 @@
 layout: list
 
 # The title of the tag's page.
-title: Blogs
+title: 函数式编程
 
 # The name of the tag, used in a post's front matter (e.g. tags: [<slug>]).
-slug: blogs
+slug: 函数式编程
 
 # Setting `menu` will generate an entry in the sidebar for this tag.
 menu: true
 order: 1
 ---
 
-![alt text](/assets/img/blogs-bg.jpg)
+![alt text](/assets/imgs/nadine-shaabana-ZPP-zP8HYG0-unsplash.jpg)
