--- a/函数式编程/_posts/2020-07-27-函数式编程导言.md
+++ b/函数式编程/_posts/2020-07-27-函数式编程导言.md
@@ -122,7 +122,7 @@ console.log(fold(fp.monoid.monoidString, ['1', '2', '3']));
 `fold`方法通过参数接受类型`T`所支持的`concat`操作和`empty`单例, 而没有将其实现绑定在某一具体的类型(string/number)上, 
 从而实现了函数的通用性, 使得`fold`函数支持更加广泛的类型, 只要其类型实现了`monoid`.
  
-`monoid.monoidSum`和`monoid.monoidString`分别对应number类型(加法)和string类型的实现,其实现为:
+`monoid.monoidSum`和`monoid.monoidString`分别对应number类型(加法)和string类型的`monoid`实现, 其实现为:
 ```typescript
 export const semigroupSum: Semigroup<number> = {
   concat: (x, y) => x + y
@@ -152,13 +152,10 @@ const logMaxNumber: LogMaxNumber = fp.function.flow(
     fp.nonEmptyArray.max(fp.ord.ordNumber),
     fp.console.log
 );
-ªª
+
+// log: 5
 const main: () => void = () => logMaxNumber([1, 2, 3, 4, 5])();
 
-/*
-log: 5
-note: The entry point of the program is the only place where side effects are allowed
-*/
 main();
 ```
 其中的`fp.io.IO`为一个ADT, 其类型定义为:
@@ -175,7 +172,7 @@ export function log(s: unknown): IO<void> {
 };
 ```
 理清各个代码片段后, 我们可以总结出, 在这个严格控制副作用式FP的例子中, 我们将副作用(console.log)推迟到`main`函数进行,
-从而实现副作用的隔离 -- 整个程序除了`main`函数外, 其他代码都是无副作用的.
+从而实现副作用的隔离 - - 整个程序除了`main`函数外, 其他代码都是无副作用的.
 
 无副作用使得程序符合`透明引用替换`, 即, 所有的函数的调用都可以替换为其函数的运行结果值.
 
@@ -185,7 +182,7 @@ export function log(s: unknown): IO<void> {
 但严格控制副作用也使得我们需要引进其他的编程技术, 其中包括一系列ADT, 如`IO`, `Monad`等, 这使得严格控制副作用式编程上手难度高,
 处理副作用时需要更多的设计, 这也使得"是否采用严格控制副作用"成为争议话题.
 
-笔者认为"是否采用严格控制副作用"应遵循社区主流实践, 如JS社区未采用严格控制副作用的编程范式, 故不应将架构特意设计为控制副作用的编程范式,  
+笔者认为"是否采用严格控制副作用"应遵循社区主流实践, 如JS社区未采用严格控制副作用的编程范式, 故不应将架构特意设计为严格控制副作用的编程范式,  
 只在函数设计/小模块中小范围内使用改编程范式, 以配合社区里的众多的函数库/框架的设计.
 
 详情请参见该系列的其他博客.
