--- a/设计模式/_posts/2020-08-07-23种经典设计模式.md
+++ b/设计模式/_posts/2020-08-07-23种经典设计模式.md
@@ -14,6 +14,7 @@ title: 23种经典设计模式
 ![思维导图](https://raw.githubusercontent.com/jituanlin/public-docs/master/mindmaps/23%E7%A7%8D%E7%BB%8F%E5%85%B8%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F.png)
 
 ---
-
-[源文件](https://github.com/jituanlin/public-docs/tree/master/mindmaps) 
+参考:
+1. [源文件](https://github.com/jituanlin/public-docs/tree/master/mindmaps)
+2. [design-patterns-for-humans](https://github.com/kamranahmedse/design-patterns-for-humans) 
 
