init scheduled blogs

--- a/_featured_categories/数据库.md
+++ b/_featured_categories/数据库.md
@@ -3,14 +3,14 @@
 layout: list
 
 # The title of the tag's page.
-title: React
+title: 数据库
 
 # The name of the tag, used in a post's front matter (e.g. tags: [<slug>]).
-slug: React
+slug: 数据库
 
 # Setting `menu` will generate an entry in the sidebar for this tag.
 menu: true
 order: 5
 ---
 
-![alt text](/assets/imgs/maarten-van-den-heuvel-gZXx8lKAb7Y-unsplash.jpg)
+![alt text](/assets/imgs/clayton-cardinalli-OLS57j5VOoo-unsplash.jpg)
