--- a/函数式编程/_posts/2020-07-27-函数式编程导言.md
+++ b/函数式编程/_posts/2020-07-27-函数式编程导言.md
@@ -6,10 +6,10 @@ title: 函数式编程导言
 # 函数式编程导言
 
 函数式编程为一系列编程技术的集合:
-1. 管道操作
-2. 柯里化
-3. 代数数据类型
-4. 严格限制副作用编程
+- 管道操作
+- 柯里化
+- 代数数据类型
+- 严格限制副作用编程
 
 ## 管道操作
 示例:
@@ -26,8 +26,8 @@ console.log('二维数据的所有元素个数为', dataProcessor(originalData))
 在这段代码中, 我们使用了`R.pipe`这个函数进行管道操作, 先对数组分别求出长度, 再将各个长度求和得出结果.
  
 管道操作即为将一系列的操作头尾相连串联起来, 带来的收益是:
-1. 省去中间变量, 代码简洁紧凑
-2. 不可变数据风格, 易于debug和理解
+- 省去中间变量, 代码简洁紧凑
+- 不可变数据风格, 易于debug和理解
 
 debug需要借助`R.tap`函数:
 ```typescript
@@ -182,7 +182,7 @@ export function log(s: unknown): IO<void> {
 但严格控制副作用也使得我们需要引进其他的编程技术, 其中包括一系列ADT, 如`IO`, `Monad`等, 这使得严格控制副作用式编程上手难度高,
 处理副作用时需要更多的设计, 这也使得"是否采用严格控制副作用"成为争议话题.
 
-笔者认为"是否采用严格控制副作用"应遵循社区主流实践, 如JS社区未采用严格控制副作用的编程范式, 故不应将架构特意设计为严格控制副作用的编程范式,  
+笔者认为"是否采用严格控制副作用"应遵循社区主流实践, 如JS社区未采用严格控制副作用的编程范式, 故不应将架构特意设计为严格控制副作用的编程范式,
 只在函数设计/小模块中小范围内使用改编程范式, 以配合社区里的众多的函数库/框架的设计.
 
 详情请参见该系列的其他博客.
