--- a/TS/_posts/2020-08-10-TS-重要不常用的知识.md
+++ b/TS/_posts/2020-08-10-TS-重要不常用的知识.md
@@ -48,12 +48,131 @@ f2 = f1; // Ok
 f2 = f3; // Error
 ```
 
-## TS的`conditional types`具有分配性.
-示例:
-```typescript
+## TS的`conditional types`具有分配性
+当`conditional type`中被判断的类型是类型变量(type variable), 且传入的类型参数是`union`类型, 那么其返回的类型亦会是`union`类型.
+其执行流程为, TS将`union`类型的参数中所有的类型成员(constituent)一个个取出, 传入类型构造器, 而后将结果收集起来, 组成最终返回的`union`类型.
 
+示例1:
+```typescript
+type Boxed<T> = {
+  _V: T;
+};
+
+type Boxed2<T> = T extends any
+  ? {
+      _V: T;
+    }
+  : never;
+
+type Boxed3<T> = number extends any
+  ? {
+      _V: T;
+    }
+  : never;
+
+/**
+ * inferred as Boxed {
+ *     _V : 1|2
+ * }
+ * */
+type A = Boxed<1 | 2>;
+
+/**
+ * inferred as
+ *  Boxed {
+ *     _V : 1
+ *  }|
+ *  Boxed {
+ *     _V : 1
+ *  }
+ *  distributely
+ * */
+type A1 = Boxed2<1 | 2>;
+
+/**
+ * inferred as Boxed {
+ *     _V : 1|2
+ * }
+ * NOT distributely, because the type to be judged should be a type variable.
+ * */
+type A2 = Boxed3<1 | 2>;
 ```
+
+示例2:
+```typescript
+type Diff<A, B> = A extends B ? never : A;
+
+// inferred as 2|3
+type T = Diff<1 | 2 | 3, 1>;
+```
+
+示例1, 展示了只有被推断的类型为类型变量, `conditional type`才具有分配性.
+
+示例2, 展示了其执行流程, 所有的`union`类型的类型成员被传入类型构造器后, 其结果收集成为最终返回的`union`类型.
+
+## TS类型树
+图示(此处为引用, 但出处不明):
+![类型树](https://github.com/jituanlin/public-docs/blob/master/images/prts_0301.png?raw=true)
+
+上图用箭头`A`指向`B`表示类型`A`是类型`B`的`supertype`.
+
+*此图有一处错误: 即, any和unknown实际上互为supertype, 而非any为unknown的subtype*. 证明如下:
+```typescript
+// any is assignable to unknown
+export type S1 = any extends unknown ? 1 : 0;
+
+// unknown is assignable to any
+export type S2 = unknown extends any ? 1 : 0;
+```
+
+结合图表可知, `unknow`和`any`同时为TS中的`top type`, 即, 所有类型的`supertype`.
+`never`为TS中的`bottom type`, 即, 所有类型的`subtype`.
+
+使用上, 除非期望的类型是`never`, TS不会对类型为`any`的值作任何检查, , 故可以使用`any`绕过TS类型检查:
+```typescript
+// Pass, because TS will not check value of `any` type, except the expected type is `never`.
+f(42 as any);
+
+/**
+ * Type error, because the expected type is `never`.
+ * */
+f2(42 as any);
+```
+
+## TS4.0版本修复`rest element`判断异常的bug 
+```typescript
+export type T<A> = A extends any[] ? [number, ...A] : never;
+```
+该代码在TS4.0版本之前报错`A rest element type must be an array type`, 4.0之后版本工作正常.
+
+在[这个PR](https://github.com/microsoft/TypeScript/pull/39094)之后, TS对tuple的推导将会变得比较完善.
+
+## TS3.7版本支持递归类型
+代码示例:
+```typescript
+type Tree<T> = {
+  value: T;
+  children: Tree<T>;
+};
+```
+在[这个PR](https://github.com/microsoft/TypeScript/pull/40002)之后, TS将支持`recursive conditional types`, 在此之前, TS
+可以通过一些[技巧](https://github.com/millsp/ts-toolbelt/tree/master/src/Iteration)实现对类型的迭代.
+
+## Higher Kind Type
+`string`, `number`, `Option<number>`这些没有接受类型参数的类型, 我们称之为`proper type`.
+
+`Option`, `Record`, `Array` 这些接受`proper type`作为类型参数的类型, 我们称之为`type constructor`.
+
+`Functor`, `Monad`, `Reader` 这些接受`type constructor`作为类型参数的类型, 我们称之为`Higher Kind Type`.
+
+TS本身不支持`higher kind type`, 但`fp-ts`通过一些技巧对其进行实现, 详情请阅读其[实现代码](https://github.com/gcanti/fp-ts/blob/master/src/HKT.ts),
+及其[使用示范](https://github.com/jituanlin/cookbook/blob/master/js-stack/js/sequence-record-of-promises/fp-ts-veriosn-implementation.ts).
+
+`higher kind type`是实现[ADT](https://jituanlin.github.io/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/2020-07-27-%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B%E5%AF%BC%E8%A8%80/#%E4%BB%A3%E6%95%B0%E6%95%B0%E6%8D%AE%E7%B1%BB%E5%9E%8B)的基础实施.
 
 --- 
 参考:
-- [condition type的MR](https://github.com/microsoft/TypeScript/pull/21316)
+- [conditional type的MR](https://github.com/microsoft/TypeScript/pull/21316)
+- [优化递归类型的MR](https://github.com/microsoft/TypeScript/pull/33050)
+- [rest element的issue](https://github.com/microsoft/TypeScript/issues/26113)
+- [关于Higher Kind Type stackoverflow上的回答](https://stackoverflow.com/questions/6246719/what-is-a-higher-kinded-type-in-scala)
