--- a/JS/_posts/2020-08-11-JS事件轮询机制.md
+++ b/JS/_posts/2020-08-11-JS事件轮询机制.md
@@ -4,3 +4,16 @@ title: JS事件轮询机制
 ---
 
 # JS事件轮询机制
+本文为[该文档](https://blog.insiderattack.net/event-loop-and-the-big-picture-nodejs-event-loop-part-1-1cb67a182810)
+的学习笔记, 其思维导图如下:
+![思维导图](https://raw.githubusercontent.com/jituanlin/public-docs/master/mindmaps/Node.js%20event%20loop.png)
+
+重要流程图:
+![4 phase](https://miro.medium.com/max/2200/1*2yXbhvpf1kj5YT-m_fXgEQ.png)
+
+![7 phase](https://miro.medium.com/max/1498/1*lkkdFLw5vh1bZJl8ysOAng.jpeg)
+
+
+---
+参考:
+- [思维导图源文件](https://github.com/jituanlin/public-docs/blob/master/mindmaps/Node.js%20event%20loop.xmind)
