--- a/TS/_posts/2020-08-10-TS-重要不常用的知识.md
+++ b/TS/_posts/2020-08-10-TS-重要不常用的知识.md
@@ -170,9 +170,29 @@ TS本身不支持`higher kind type`, 但`fp-ts`通过一些技巧对其进行实
 
 `higher kind type`是实现[ADT](https://jituanlin.github.io/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/2020-07-27-%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B%E5%AF%BC%E8%A8%80/#%E4%BB%A3%E6%95%B0%E6%95%B0%E6%8D%AE%E7%B1%BB%E5%9E%8B)的基础实施.
 
+## Polymorphic this type(F-bounded polymorphism)
+TS中, `this`关键字作为类型出现在类中的时候, 该类型动态地指向包裹它的类, 例:
+```typescript
+export class A {
+  f(): this {
+    return this;
+  }
+}
+
+export class B extends A {
+  private n = 42;
+  f1() {
+    console.log(this.f().n);
+  }
+}
+```
+方法`f`的返回值的类型是`this`, 在class B中, 调用`f`方法, 返回的类型是包含它的类, 即类`B`本身.
+  
+
 --- 
 参考:
 - [conditional type的MR](https://github.com/microsoft/TypeScript/pull/21316)
 - [优化递归类型的MR](https://github.com/microsoft/TypeScript/pull/33050)
 - [rest element的issue](https://github.com/microsoft/TypeScript/issues/26113)
 - [关于Higher Kind Type stackoverflow上的回答](https://stackoverflow.com/questions/6246719/what-is-a-higher-kinded-type-in-scala)
+- [关于Polymorphic this type的TS官方文档](https://www.typescriptlang.org/docs/handbook/advanced-types.html#polymorphic-this-types)
