--- a/设计模式/_posts/2020-08-11-OOP常见术语解析.md
+++ b/设计模式/_posts/2020-08-11-OOP常见术语解析.md
@@ -4,3 +4,67 @@ title: OOP常见术语解析
 ---
 
 # OOP常见术语解析
+在不同的上下文中, 同一个术语的意思往往有不同的意义, 了解其表达含义即可, 不应当用来*之乎者也*.
+
+## 多态(polymorphism)
+多态是指让不同类型共享同一个接口的能力.
+
+比如JS中, `string`和`Array`为不同类型, 但同时拥有`concat`方法, 同时共享了(示例之用, 并非JS底层实现):
+```typescript
+interface Concatable<T> {
+  concat(a:T, b:T): T;
+}
+```
+
+继承和覆盖(overriding)是实现多态的一种方式.
+
+### 重载(Ad-hoc polymorphism)
+定义上, 重载是一种特殊的多态.
+
+一个方法有多个不同类型签名的实现, 调用时会根据参数的类型自动选择被调用的实现.
+
+由于TS是没有runtime的, 方法的参数的类型信息在运行时都会被擦除, 所以虽然TS支持一个方法对应多个类型签名,
+但编写代码时, 只能有一个实现, 且需要在这个实现例手动匹配类型, 编写不同传入参数的处理逻辑, 示例如下(截取自官方文档):
+```typescript
+function pickCard(x: { suit: string; card: number }[]): number;
+function pickCard(x: number): { suit: string; card: number };
+function pickCard(x: any): any {
+  // Check to see if we're working with an object/array
+  // if so, they gave us the deck and we'll pick the card
+  if (typeof x == "object") {
+    let pickedCard = Math.floor(Math.random() * x.length);
+    return pickedCard;
+  }
+  // Otherwise just let them pick the card
+  else if (typeof x == "number") {
+    let pickedSuit = Math.floor(x / 13);
+    return { suit: suits[pickedSuit], card: x % 13 };
+  }
+}
+```
+
+### Parametric polymorphism
+定义上, Parametric polymorphism是一种特殊的多态.
+
+Parametric polymorphism即通过类型参数, 使得不同的类型共享同一个类型构造器, 如`Array<stirng>`和`Array<number>`是不同的两个类型,
+却共享着`Array`这个类型构造器.
+
+## 控制反转(inversion of control)
+很多时候, 开发人员通过通过组合调用库/框架的代码实现功能, 然而有的时候, 开发人员编写的代码, 反过来被框架/库调用, 此即控制反转.
+
+### 依赖注入
+依赖注入指函数/类通过外部传入依赖, 而不在自己内部创建依赖, 实现*面向接口编程*而不是*面向实现编程*.
+在实际开发中, 一般使用框架进行依赖的管理, 开发人员通过配置, 告知依赖注入框架应该什么时候, 注入哪个依赖.
+
+依赖注入框架是一种特殊的*控制反转*.
+
+一个重要的使用场景是通过依赖注入, 在测试环境下进行依赖替换, 方便测试.
+
+
+
+--- 
+参考:
+- [关于多态的stackoverflow的回答](https://stackoverflow.com/questions/1031273/what-is-polymorphism-what-is-it-for-and-how-is-it-used)
+- [关于Ad Hoc Polymorphism的stackoverflow的回答](https://stackoverflow.com/questions/34252739/polymorphism-parametric-polymorphism-ad-hoc-polymorphism#:~:text=Ad%2Dhoc%20polymorphism%20is%20also,which%20method%20will%20be%20invoked.&text=So%2C%20the%20Collection,and%20what%20not.)
+- [维基百科对多态的定义](https://www.wikiwand.com/en/Polymorphism_(computer_science))
+- [维基百科对依赖注入的定义](https://www.wikiwand.com/en/Dependency_injection#:~:text=Inversion%20of%20control%20(IoC)%20is,is%20the%20template%20method%20pattern.)
