--- a/TS/_posts/2020-08-10-TS-重要不常用的知识.md
+++ b/TS/_posts/2020-08-10-TS-重要不常用的知识.md
@@ -188,7 +188,11 @@ export class B extends A {
 ```
 方法`f`的返回值的类型是`this`, 在class B中, 调用`f`方法, 返回的类型是包含它的类, 即类`B`本身.
   
+## ambient type declaration
+TODO
 
+## TS中的类型兼容机制  
+TODO
 --- 
 参考:
 - [conditional type的MR](https://github.com/microsoft/TypeScript/pull/21316)
