--- a/网络/_posts/2020-08-18-http-code.md
+++ b/网络/_posts/2020-08-18-http-code.md
@@ -4,7 +4,11 @@ title: HTTP Code
 ---
 
 # HTTP/2
-本文为[该文档](https://github.com/jituanlin/public-docs/blob/master/public-mindmaps/HTTP%20code.png?raw=true) 的学习笔记
+本文为[该文档](https://developer.mozilla.org/en-US/docs/Web/HTTP/Status) 的学习笔记
 
 思维导图如下:
-![思维导图](https://github.com/jituanlin/public-docs/blob/master/public-mindmaps/HTTP%20code.xmind)
+![思维导图图片](https://github.com/jituanlin/public-docs/blob/master/public-mindmaps/HTTP%20code.png?raw=true)
+
+---
+参考
+- [思维导图](https://github.com/jituanlin/public-docs/blob/master/public-mindmaps/HTTP%20code.xmind)
