--- a/网络/_posts/2020-08-17-tcp-连接建立与终止.md
+++ b/网络/_posts/2020-08-17-tcp-连接建立与终止.md
@@ -3,7 +3,7 @@ layout: post
 title: TCP连接建立与终止
 ---
 
-# TTCP连接建立与终止
+# TCP连接建立与终止
 本文为[该文档](https://afteracademy.com/blog/what-is-a-tcp-3-way-handshake-process)与
 [另外一个文档](https://www.geeksforgeeks.org/tcp-connection-termination/)的学习笔记.
 
