--- a/网络/_posts/2020-08-18-http-code.md
+++ b/网络/_posts/2020-08-18-http-code.md
@@ -3,7 +3,7 @@ layout: post
 title: HTTP Code
 ---
 
-# HTTP/2
+# HTTP Code
 本文为[该文档](https://developer.mozilla.org/en-US/docs/Web/HTTP/Status) 的学习笔记
 
 思维导图如下:
