--- a/JS/_posts/2020-08-11-nodejs-事件轮询机制.md
+++ b/JS/_posts/2020-08-11-nodejs-事件轮询机制.md
@@ -1,9 +1,11 @@
 ---
 layout: post
-title: JS事件轮询机制
+title: nodejs事件轮询机制
 ---
 
-# JS事件轮询机制
+# nodejs事件轮询机制
+*本文为nodejs事件轮训机制, 浏览器实现与此有差异, 特此注明.*
+
 本文为[该文档](https://blog.insiderattack.net/event-loop-and-the-big-picture-nodejs-event-loop-part-1-1cb67a182810)
 的学习笔记, 其思维导图如下:
 ![思维导图](https://raw.githubusercontent.com/jituanlin/public-docs/master/public-mindmaps/Node.js%20event%20loop.png)
@@ -17,3 +19,4 @@ title: JS事件轮询机制
 ---
 参考:
 - [思维导图源文件](https://github.com/jituanlin/public-docs/blob/master/public-mindmaps/Node.js%20event%20loop.xmind)
+- [浏览器和nodejs事件轮训实现具有差异性](https://stackoverflow.com/questions/31582672/what-is-the-different-between-javascript-event-loop-and-node-js-event-loop)
