--- a/网络/_posts/2020-08-30-cookie.md
+++ b/网络/_posts/2020-08-30-cookie.md
@@ -3,7 +3,7 @@ layout: post
 title: cookie
 ---
 
-# 网络安全
+# cookie
 本文为cookie基本知识的梳理, 思维导图如下:
 ![思维导图](https://github.com/jituanlin/public-docs/blob/master/public-mindmaps/cookie.png?raw=true)
 
