--- a/TS/_posts/2020-08-10-TS-重要不常用的知识.md
+++ b/TS/_posts/2020-08-10-TS-重要不常用的知识.md
@@ -188,11 +188,57 @@ export class B extends A {
 ```
 方法`f`的返回值的类型是`this`, 在class B中, 调用`f`方法, 返回的类型是包含它的类, 即类`B`本身.
   
-## ambient type declaration
-TODO
+## 在TS中比较两个类型是否相等
+代码示例如下
+```typescript
+export type Equals<X, Y> =
+    (<T>() => T extends X ? 1 : 2) extends
+    (<T>() => T extends Y ? 1 : 2) ? true : false;
+```
 
-## TS中的类型兼容机制  
-TODO
+这里用到的是TS的一个内部机制, 当TS对两个*deferred type*进行比较时, 是使用严格相等的比较(`isTypeIdenticalTo`),
+而非普通的*assignable*,普通的assignable会忽略属性的修饰符, 示例如下:
+```typescript
+interface A {
+  readonly a: number;
+}
+
+interface B {
+  a: number;
+}
+// type T = 1
+type T = A extends B ? 1 : 0;
+```
+
+而上述`Equals`类型的实现中, 通过引入待定类型变量`T`, 使得TS无法确认`T extends X `与` T extends Y`是否为真, 
+故`<T>() => T extends X ? 1 : 2`被TS推断为deferred type.
+
+## TS对object字面量会进行严格的属性检查
+代码示例如下:
+```typescript
+export type O = {
+  a: number;
+};
+
+// type error: Object literal may only specify known properties
+/**
+ * const obj: O = {
+ * a: 1,
+ * b: 2,
+ *};
+ */
+
+const obj1 = {
+  a: 1,
+  b: 2,
+};
+
+// OK without type error, since obj1 is not object literal
+const b: O = obj1;
+```
+TS为了防止常见的在初始化object字面量时的拼写错误, 会对object字面量进行检查, 
+也就是说, 所有的object字面量的属性都必须已经在类型中进行明确的定义.
+
 --- 
 参考:
 - [conditional type的MR](https://github.com/microsoft/TypeScript/pull/21316)
@@ -200,3 +246,4 @@ TODO
 - [rest element的issue](https://github.com/microsoft/TypeScript/issues/26113)
 - [关于Higher Kind Type stackoverflow上的回答](https://stackoverflow.com/questions/6246719/what-is-a-higher-kinded-type-in-scala)
 - [关于Polymorphic this type的TS官方文档](https://www.typescriptlang.org/docs/handbook/advanced-types.html#polymorphic-this-types)
+- [关于TS对deferred type的assignability的比较机制](https://github.com/microsoft/TypeScript/issues/27024#issuecomment-510924206)
