--- a/浏览器/_posts/2020-09-03-CSS-学习笔记.md
+++ b/浏览器/_posts/2020-09-03-CSS-学习笔记.md
@@ -1,7 +1,14 @@
 ---
 layout: post
-title: CSS学习笔记
+title: CSS基础知识
 ---
 
-# CSS学习笔记
-TODO
+# CSS基础知识
+本文为CSS基础知识的学习笔记
+
+思维导图如下:
+![思维导图](https://github.com/jituanlin/public-docs/blob/master/public-mindmaps/CSS.png?raw=true)
+
+--- 
+参考:
+- [思维导图源文件](https://github.com/jituanlin/public-docs/blob/master/public-mindmaps/CSS.xmind)
