--- a/原创/_posts/2020-07-27-函数式编程导言.md
+++ b/原创/_posts/2020-07-27-函数式编程导言.md
@@ -133,12 +133,12 @@ export const monoidSum: Monoid<number> = {
   empty: 0
 }
 
-export const semigroupProduct: Semigroup<number> = {
-  concat: (x, y) => x * y
+export const semigroupString: Semigroup<string> = {
+    concat: (x, y) => x + y
 }
-export const monoidProduct: Monoid<number> = {
-  concat: semigroupProduct.concat,
-  empty: 1
+export const monoidString: Monoid<string> = {
+    concat: S.semigroupString.concat,
+    empty: ''
 }
 ```
 
