--- a/原创/_posts/2020-12-14-io-ts-前置基础知识.md
+++ b/原创/_posts/2020-12-14-io-ts-前置基础知识.md
@@ -263,7 +263,7 @@ const eitherFirstName = either.mapLeft(error=>error.message)(either.left(new Err
        return either.map(n => n + 1)(fa())
     }
 ```
-即, `either`处理异常的方式是串联的(列表结构): 上游逻辑的异常会导致下游逻辑直接返回, 不再继续执行.
+即, `either`处理异常的方式是串联的(链表结构): 上游逻辑的异常会导致下游逻辑直接返回, 不再继续执行.
 
 这种方式使得错误处理的方式是*引用透明的*, 即对调用函数的调用总是可以替换为函数的返回值, 
 如上述例子中, 我们可以将对`fa()`的调用替换为`either.left('error message')`, 其执行逻辑不变.
