--- a/原创/_posts/2020-08-10-TS-重要不常用的知识.md
+++ b/原创/_posts/2020-08-10-TS-重要不常用的知识.md
@@ -113,7 +113,7 @@ type T = Diff<1 | 2 | 3, 1>;
 
 ## TS类型树
 图示(此处为引用, 但出处不明):
-![类型树](https://github.com/jituanlin/public-docs/blob/master/images/prts_0301.png?raw=true)
+![类型树](https://github.com/polymona/public-docs/blob/master/images/prts_0301.png?raw=true)
 
 上图用箭头`A`指向`B`表示类型`A`是类型`B`的`supertype`.
 
@@ -167,9 +167,9 @@ type Tree<T> = {
 `Functor`, `Monad`, `Reader` 这些接受`type constructor`作为类型参数的类型, 我们称之为`Higher Kind Type`.
 
 TS本身不支持`higher kind type`, 但`fp-ts`通过一些技巧对其进行实现, 详情请阅读其[实现代码](https://github.com/gcanti/fp-ts/blob/master/src/HKT.ts),
-及其[使用示范](https://github.com/jituanlin/cookbook/blob/master/js-stack/js/sequence-record-of-promises/fp-ts-veriosn-implementation.ts).
+及其[使用示范](https://github.com/polymona/cookbook/blob/master/js-stack/js/sequence-record-of-promises/fp-ts-veriosn-implementation.ts).
 
-`higher kind type`是实现[ADT](https://jituanlin.github.io/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/2020-07-27-%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B%E5%AF%BC%E8%A8%80/#%E4%BB%A3%E6%95%B0%E6%95%B0%E6%8D%AE%E7%B1%BB%E5%9E%8B)的基础实施.
+`higher kind type`是实现[ADT](https://polymona.github.io/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/2020-07-27-%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B%E5%AF%BC%E8%A8%80/#%E4%BB%A3%E6%95%B0%E6%95%B0%E6%8D%AE%E7%B1%BB%E5%9E%8B)的基础实施.
 
 ## Polymorphic this type(F-bounded polymorphism)
 TS中, `this`关键字作为类型出现在类中的时候, 该类型动态地指向包裹它的类, 例:
