--- a/原创/_posts/2020-12-14-io-ts-前置基础知识.md
+++ b/原创/_posts/2020-12-14-io-ts-前置基础知识.md
@@ -10,7 +10,7 @@ tags:       [函数式编程]
 ## 代数数据类型
 
 ### 代数数据类型是什么
-[参考*函数式编程导言*](https://jituanlin.github.io/%E5%8E%9F%E5%88%9B/2020-07-27-%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B%E5%AF%BC%E8%A8%80/#%E4%BB%A3%E6%95%B0%E6%95%B0%E6%8D%AE%E7%B1%BB%E5%9E%8B)
+[参考*函数式编程导言*](https://polymona.github.io/%E5%8E%9F%E5%88%9B/2020-07-27-%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B%E5%AF%BC%E8%A8%80/#%E4%BB%A3%E6%95%B0%E6%95%B0%E6%8D%AE%E7%B1%BB%E5%9E%8B)
 
 ### io-ts内部使用到的ADT
 
